--- a/src/app/components/auth/set-password/set-password.component.html
+++ b/src/app/components/auth/set-password/set-password.component.html
@@ -154,11 +154,22 @@
                         </div>
                      
                         <button
+                        *ngIf="!otpSent"
                             pButton
                             pRipple
                             label="XÁC NHẬN"
                             class="w-full p-3 text-xl"
                             type="submit"
+                        ></button>
+
+                        <button
+                        *ngIf="otpSent"
+                            pButton
+                            pRipple
+                            label="Quay lại trang đăng nhập"
+                            class="w-full p-3 text-xl"
+                            type="submit"
+                            (click)="navigateToSetPassword()"
                         ></button>
                     </div>
                 </div>
