--- a/src/app/components/activate-success/activate-success.component.html
+++ b/src/app/components/activate-success/activate-success.component.html
@@ -72,7 +72,12 @@
                 </div>
             </div>
         </div>
+       
         <div class="mt-3">
+            <div class="icon-file" (click)="exportPDF()">
+                <i style="font-size: 1.5rem; padding: 15px 10px;" class="pi pi-file-pdf"></i>
+                <label style="font-weight: 600; padding-bottom: 10px; cursor: pointer; margin-top: 18px;" for="">Xuất file PDF</label>
+            </div>
             <p-table [value]="warrantyById">
                 <ng-template pTemplate="header">
                     <tr>
@@ -122,7 +127,8 @@
                 class="flex-1"
             ></button>
         </div>
-    </div>
+
+       
     <footer class="footer">
         <h1>THÔNG TIN CHUNG</h1>
         <h1 class="name-company">CÔNG TY TNHH TMDV & XNK TIẾN LINH</h1>
@@ -130,4 +136,53 @@
         <span>Email: tienlinhgroups&#64;gmail.com</span>
         <span>SĐT:0973952732 - 0915317043</span>
     </footer>
+</div>
+
+<div class="transfer-note" id="transferNote" style="display: none;">
+    <div class="header">
+      <div style="display: flex;" class="company-info">
+        <img style="padding: 10px;" src="assets/image/logo/logo.png" alt="logo">
+        <div style="padding: 28px 10px;">
+          <h4 style="font-size: 14px;">CÔNG TY TNHH THƯƠNG MẠI DỊCH VỤ VÀ XUẤT KHẨU TIẾN LINH</h4>
+          <p style="padding: 10px 0; font-size: 14px;">ĐC: Yên phú - Yên Mỹ - Hưng Yên</p>
+        </div>
+      </div>
+    </div>
+    <div class="transfer-code">
+      <p style="font-style: italic; font-weight: 600; font-size: 16px; padding-right: 40px;">Mã Kích hoạt: {{ warrantyById[0]?.code || "" }}</p>
+    </div>
+
+    <h3 style="text-align: center;">PHIẾU KÍCH HOẠT</h3>
+
+    <div class="details">
+      <div class="content-transfer">
+        <p>Chi nhánh: {{ warrantyById[0]?.branchName || "" }}</p>
+        <p>Ngày kích hoạt: {{ currentDate }}</p>
+      </div>
+      <div style="margin-left: 50px;" class="content-transfer">
+        <p>Khách hàng: {{ warrantyById[0]?.cusSuccess?.name || "" }}</p>
+        <p>SĐT: {{ warrantyById[0]?.phoneNumber || "" }}</p>
+        <p>Địa chỉ: {{ warrantyById[0]?.cusSuccess?.addressDetail || "" }}</p>
+      </div>
+    </div>
+    
+
+    <h4 style="padding: 0 30px;">Danh sách sản phẩm</h4>
+
+    <div style="padding: 0 30px;">
+      <table class="orders-table">
+        <thead>
+          <tr>
+            <th style="width: 5%;">#</th>
+            <th style="width: 15%;">Tên sản phẩm</th>
+            <th style="width: 12%;">Số serial</th>
+            <th style="width: 10%;">Bảo hành</th>
+            <th style="width: 10%;">Ngày hết hạn</th>
+          </tr>
+        </thead>
+        <tbody>
+        
+        </tbody>
+      </table>
+    </div>
 </div>
