--- a/src/app/components/pages/warranty/warranty-request/show/show.component.html
+++ b/src/app/components/pages/warranty/warranty-request/show/show.component.html
@@ -20,7 +20,6 @@
         </p-toolbar>
         <div class="card">
             <p-toast></p-toast>
-
             <p-table
                 #dt
                 styleClass="p-datatable-striped"
@@ -49,15 +48,37 @@
                                     pInputText
                                     type="text"
                                     [(ngModel)]="
-                                        this.optionsFillerProduct.KeyWord
+                                        this.optionsFilterWarrantyClaims
+                                            .KeyWordCustomer
                                     "
-                                    placeholder="Tìm kiếm theo tên/SKU sản phẩm"
+                                    placeholder="Tìm kiếm theo tên khách hàng/SĐT"
                                     style="width: 350px"
                                     class="sm:"
                                 />
                             </span>
                         </div>
                         <div class="flex flex-column">
+                            <label
+                                for="email1"
+                                class="block text-900 text-large font-weight mb-2"
+                                >Tìm theo số Serial:</label
+                            >
+                            <span class="block mt-2 md:mt-0 p-input-icon-left">
+                                <i class="pi pi-search"></i>
+                                <input
+                                    pInputText
+                                    type="text"
+                                    [(ngModel)]="
+                                        this.optionsFilterWarrantyClaims
+                                            .ProductCode
+                                    "
+                                    placeholder="Tìm kiếm theo số Serial"
+                                    style="width: 300px"
+                                    class="sm:"
+                                />
+                            </span>
+                        </div>
+                        <!-- <div class="flex flex-column">
                             <label
                                 for="email1"
                                 class="block text-900 text-large font-weight mb-2"
@@ -68,7 +89,7 @@
                                 placeholder="Chọn khoảng thời gian"
                                 inputId="icon"
                             ></p-calendar>
-                        </div>
+                        </div> -->
                         <div class="flex flex-column">
                             <label
                                 for="email1"
@@ -77,8 +98,11 @@
                             >
                             <p-dropdown
                                 [options]="this.optionsStatus"
-                                [(ngModel)]="this.statusFilter"
-                                optionLabel="name"
+                                [(ngModel)]="
+                                    this.optionsFilterWarrantyClaims.Status
+                                "
+                                optionLabel="label"
+                                optionValue="value"
                                 [showClear]="true"
                                 placeholder="Chọn trạng thái"
                             >
@@ -88,7 +112,7 @@
                             pButton
                             pRipple
                             label="Lọc"
-                            (click)="EvenFilter()"
+                            (click)="loadWarrantyClaims()"
                         ></button>
                     </div>
                 </ng-template>
@@ -108,6 +132,7 @@
                     <tr>
                         <td>
                             <span
+                                class="code-request"
                                 [routerLink]="[
                                     '/pages/warranty/warranty-request/edit',
                                     warranty.id
@@ -228,6 +253,29 @@
                     </tr>
                 </ng-template>
             </p-table>
+            <div
+                class="flex align-items-center"
+                style="justify-content: space-between"
+            >
+                <p>
+                    <span style="font-weight: 500">{{ startRecord }}</span> -
+                    <span style="font-weight: 500">{{ endRecord }}</span> trong
+                    <span style="font-weight: 500">{{
+                        totalRecordsCount
+                    }}</span>
+                    bản ghi
+                </p>
+                <div *ngIf="warrantyClaims?.length > 0">
+                    <p-paginator
+                        [rows]="pageSize"
+                        (onPageChange)="onPageChange($event)"
+                        [totalRecords]="
+                            totalRecordsCount > 0 ? totalRecordsCount : 1
+                        "
+                        [rowsPerPageOptions]="[10, 20, 30]"
+                    ></p-paginator>
+                </div>
+            </div>
         </div>
 
         <p-dialog
