--- a/src/app/components/pages/inventory-product/show/show.component.html
+++ b/src/app/components/pages/inventory-product/show/show.component.html
@@ -285,7 +285,7 @@
                                                     </h6>
                                                 </div>
                                             </td>
-                                            <td>{{ variant.unitName }}</td>
+                                            <td>{{ product.unitName }}</td>
                                             <td>{{ variant.quantity }}</td>
                                         </tr>
                                     </ng-template>
