--- a/src/app/components/pages/warranty/warranty-certificate/warranty-certificate.component.html
+++ b/src/app/components/pages/warranty/warranty-certificate/warranty-certificate.component.html
@@ -472,6 +472,9 @@
                                         <button
                                             type="button"
                                             pButton
+                                            *ngIf="
+                                                warrantyOrder.statusRequest != 1
+                                            "
                                             (click)="
                                                 warrantyRequest(warrantyOrder)
                                             "
